@@ -3,9 +3,8 @@ local libq = require("__janky-quality__/lib/quality")
 local trigger_mods = require(lib.p.prot .. "trigger_mods")
 local m = jq_entity_mods
 
-m.all_entities_mod = m.mod { ["max_health.?"] = m.mult(0.3), ["rocket_launch_product.1.?"] = m.with_quality }
-
 return {
+    ["__all__"] = m.mod { ["max_health.?"] = m.mult(0.3), ["rocket_launch_product.1.?"] = m.with_quality },
     ["lab"] = m.default_mod("researching_speed"),
     ["assembling-machine"] = m.default_mod("crafting_speed"),
     ["furnace"] = m.default_mod("crafting_speed"),
