@@ -7,6 +7,7 @@ Date: ???
     - Some extra non-SA bonuses
     - Support for non-quality item filters
     - Reduce more recipes
+    - Reorganized the quality bonuses modding
   Bug fixes:
     - Support tiles that are minable but return nothing
     - Fix connections and fluids when upgrading/downgrading with quality
